--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,8 @@ section {
 .second-ul {
   list-style-type: none;
   text-align: center;
+  margin: 0 auto;
+  display: table;
 }
 
 .second-ul li {
@@ -107,4 +109,47 @@ div.row {
 
 p.goto {
   color: cyan;
+}
+
+img.refresh {
+  display: block;
+  margin: 0 auto;
+  width: 30px;
+  height: 30px;
+}
+
+#load {
+  text-align: center;
+}
+
+#footer {
+   background-color: rgb(255,217,110);
+   margin: 0 auto;
+}
+
+#footer h2 {
+  text-align: center;
+  font-size: 30px;
+}
+
+#footer ul {
+  list-style-type: none;
+  text-align: center;
+  margin: 0 auto;
+  display: table;
+}
+
+#footer ul li{
+  float: left;
+}
+
+#footer ul a {
+  display: block;
+  width: 120px;
+  text-decoration: none;
+  color: black;
+}
+
+#copyright {
+  text-align: center;
 }
