--- a/css/main.css
+++ b/css/main.css
@@ -153,3 +153,11 @@ img.refresh {
 #copyright {
   text-align: center;
 }
+
+.col-4 .info {
+  opacity: 0;
+}
+
+.col-4:hover .info {
+  opacity: 100;
+}
